--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/YiCppLib/KSeqCpp"]
 	path = vendor/YiCppLib/KSeqCpp
-	url = ssh://git@git.qiaoy.info:8022/YiCppLib/KSeqCpp.git
+	url = https://github.com/YiCppLib/KSeqCpp.git
